# inbrief-supervisor

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
src/: clustering.py  context.py  main.py  scheduler.py
src/api/: requests.py
src/api/routes/: callback.py  dashboard.py  preset.py  user.py
supervisor/: Dockerfile  README.md  linker_config.json  pyproject.toml
supervisor/config/: linker_config.json  network.cfg
supervisor/src/: config.py  context.py  db.py  exceptions.py  main.py  models.py  ranking.py  utils.py  workers.py
supervisor/src/api/: requests.py
supervisor/src/api/routes/: config.py  dashboard.py  feedback.py  preset.py  schedule.py  summary.py
