[project]
name = "inbrief-supervisor"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.7.1",
    "httpx>=0.27.0",
    "asgi-correlation-id>=4.3.1",
    "asyncio>=3.4.3",
    "uvicorn>=0.29.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/inbrief_supervisor"]
