[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["Nikita Rydanov <wrongwayboyy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
pydantic-settings = "^2.0.2"
numpy = "^1.25.2"
uvicorn = "^0.23.2"
fastapi = "^0.101.1"
httpx = "^0.24.1"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/nightly/cu121"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
